Fixed edit button UI error when displayed on mobile device. (#448)

--- a/EmpleoDotNet/Content/css/theme/style.css
+++ b/EmpleoDotNet/Content/css/theme/style.css
@@ -883,9 +883,10 @@ header {
 		width: 100%;
 	}
 
-		.jobs a.featured, .jobs div.featured {
+		.jobs div.featured {
 			background: #f8f8f8;
 			border-bottom: 1px solid #14b1bb;
+            display:table;
 		}
 
 		.jobs .featured:hover,
@@ -911,7 +912,7 @@ header {
             display: table-cell;
             margin: 0 auto;
             vertical-align: middle;
-            padding: 8px 20px;
+            padding: 0 5px;
             background-color: rgba(20, 177, 187, 0.62);
             color: #fff;
         }
